# watzimalabaree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  run_precommit.py
src/watzimalabaree/: main.py  malabaree.py  ovazlabaree.py
src/watzimalabaree/models/: boardgame.py  book.py  item.py  otheritem.py
src/watzimalabaree/tools/: book_storage.py  item_storage.py
